--- a/hw10/index.html
+++ b/hw10/index.html
@@ -92,7 +92,7 @@
 <div class="wrap-gallery">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" role="button"  class="active">
                 <svg class="btn-img" width="11" height="11"
                     viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path  fill-rule="evenodd" clip-rule="evenodd"
@@ -101,7 +101,7 @@
                 </svg>
                 <span>Posts</span>
             </li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1">
+            <li data-target="#carouselExampleIndicators" data-slide-to="1" role="button" >
                 <svg  class="btn-img"  width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path 
                         d="M9.59575 1.18066H6.99787C6.88085 1.18066 6.76383 1.1339 6.67021 1.04038L5.73404 0.105207C5.59362 -0.0350691 5.38298 -0.0350691 5.24255 0.105207L4.30638 1.04038C4.21277 1.1339 4.09574 1.18066 3.97872 1.18066H1.40426C0.631915 1.18066 0 1.8119 0 2.58342V9.59724C0 10.3688 0.631915 11 1.40426 11H9.59575C10.3681 11 11 10.3688 11 9.59724V2.58342C11 1.8119 10.3681 1.18066 9.59575 1.18066ZM2.71489 10.2986C2.57447 10.2986 2.45745 10.1583 2.48085 10.0181C2.64468 9.26993 3.3 8.70882 4.07234 8.70882H6.88085C7.6766 8.70882 8.33191 9.26993 8.47234 10.0181C8.49574 10.1583 8.37872 10.2986 8.2383 10.2986H2.71489ZM10.2979 9.59724C10.2979 9.99469 9.99362 10.2986 9.59575 10.2986H9.45532C9.3383 10.2986 9.24468 10.2051 9.22128 10.0882C9.08085 8.91923 8.09787 8.00744 6.90426 8.00744H4.09574C2.90213 8.00744 1.89574 8.91923 1.77872 10.0882C1.75532 10.2051 1.6617 10.2986 1.54468 10.2986H1.40426C1.00638 10.2986 0.702128 9.99469 0.702128 9.59724V2.58342C0.702128 2.18597 1.00638 1.88204 1.40426 1.88204H4.00213C4.30638 1.88204 4.61064 1.76514 4.82128 1.53135L5.5 0.853347L6.17872 1.53135C6.38936 1.74176 6.69362 1.88204 6.99787 1.88204H9.59575C9.99362 1.88204 10.2979 2.18597 10.2979 2.58342V9.59724ZM5.5 2.81722C4.25957 2.81722 3.25319 3.82253 3.25319 5.06164C3.25319 6.30074 4.25957 7.30606 5.5 7.30606C6.74043 7.30606 7.74681 6.30074 7.74681 5.06164C7.74681 3.82253 6.74043 2.81722 5.5 2.81722ZM5.5 6.5813C4.65745 6.5813 3.95532 5.90329 3.95532 5.03826C3.95532 4.1966 4.63404 3.49522 5.5 3.49522C6.36596 3.49522 7.04468 4.17322 7.04468 5.03826C7.04468 5.87991 6.34255 6.5813 5.5 6.5813Z"
@@ -116,45 +116,45 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="container">
-            <img src="img/pexels-photo-1130847.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1166209.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1295138.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1366919.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1450082.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1486974.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1586298.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1598073.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1620372.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1666021.webp" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1670187.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1785493.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-1933239.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-2123573.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-234510.jpeg" aria-hidden="true" class="photo">
+            <div class='img-wrap'><img src="img/pexels-photo-1130847.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1166209.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1295138.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1366919.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1450082.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1486974.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1586298.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1598073.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1620372.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1666021.webp" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1670187.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1785493.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-1933239.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-2123573.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-234510.jpeg" aria-hidden="true" class="photo"></div>
         </div>
         </div> 
 
-        <!-- <div class="carousel-item">
+        <div class="carousel-item">
             <div class="container">
-            <img src="img/pexels-photo-2440021.webp" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-2440061.webp" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-258109.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-2613946.webp" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-2664483.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-3022417.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-3377538.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-346529.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-358238.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-3617500.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-414612.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-459225.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-53893.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-589697.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-847402.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-620337.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-747964.jpeg" aria-hidden="true" class="photo">
-            <img src="img/pexels-photo-753325.jpeg" aria-hidden="true" class="photo">
-        </div> -->
+            <div class='img-wrap'><img src="img/pexels-photo-2440021.webp" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-2440061.webp" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-258109.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-2613946.webp" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-2664483.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-3022417.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-3377538.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-346529.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-358238.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-3617500.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-414612.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-459225.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-53893.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-589697.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-847402.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-620337.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-747964.jpeg" aria-hidden="true" class="photo"></div>
+            <div class='img-wrap'><img src="img/pexels-photo-753325.jpeg" aria-hidden="true" class="photo"></div>
+        </div> 
         </div>
         
     </div>
@@ -162,14 +162,18 @@
     
 </div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+    <script>
+        $('.carousel').carousel()
+    </script>
 </body>
 </html>
